chore: update .env

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ GOOGLE_CLIENT_SECRET=
 
 # PRISMA
 DATABASE_URL=
+
+# MSFINANCE STOCK API (generated from https://rapidapi.com/apidojo/api/yh-finance/)
+NEXT_PUBLIC_YHFINANCE_KEY=
