chore: update scripts and .env

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ NEXTAUTH_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
+# Deployment environment (set to production for production builds)
+NODE_ENV=
+
 # PRISMA
 DATABASE_URL=
 
