chore: add NEXT_PUBLIC_APP_URL env variable and adjust api calls

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ GOOGLE_CLIENT_SECRET=
 
 # Deployment environment (set to production for production builds)
 NODE_ENV=
+NEXT_PUBLIC_APP_URL=
 
 # PRISMA
 DATABASE_URL=
