feat: migrate to twelvedata api

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,5 @@ NEXT_PUBLIC_APP_URL=
 # PRISMA
 DATABASE_URL=
 
-# MSFINANCE STOCK API (generated from https://rapidapi.com/apidojo/api/yh-finance/)
-NEXT_PUBLIC_YHFINANCE_KEY=
+# TWELVE DATA API KEY (generated from https://twelvedata.com/)
+NEXT_PUBLIC_TWELVEDATA_API_KEY=
