feat: implement Sia blockchain integration for asset addition data storage

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,14 @@ GOOGLE_CLIENT_SECRET=
 NODE_ENV=
 NEXT_PUBLIC_APP_URL=
 
-# PRISMA
+# Postgres db url
 DATABASE_URL=
+
+# Sia url
+SIA_API_URL=
+
+# Sia data encryption key (recommended: openssl rand -base64 32)
+SIA_ENCRYPTION_KEY=
 
 # TWELVE DATA API KEY (generated from https://twelvedata.com/)
 NEXT_PUBLIC_TWELVEDATA_API_KEY=
