--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "recharts": "^2.11.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.0",
