chore: restructure app to use ssr + performance gains

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,6 @@ SIA_ENCRYPTION_KEY=
 
 # TWELVE DATA API KEY (generated from https://twelvedata.com/)
 NEXT_PUBLIC_TWELVEDATA_API_KEY=
+
+SIA_ADMIN_USERNAME=
+SIA_ADMIN_PASSWORD=
