--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,33 @@ services:
     ports:
       - 5432:5432
 
+  # renterd:
+  #   image: ghcr.io/siafoundation/renterd:master-zen
+  #   environment:
+  #     - RENTERD_SEED=wreck soup text security race silly canoe enrich walnut filter vote taxi
+  #     - RENTERD_API_PASSWORD=test
+  #   ports:
+  #     - 9880:9880
+  #     - 9881:9881
+  #     - 7070:7070
+  #   volumes:
+  #     - ./data:/data
+  #   restart: unless-stopped
+  #   stop_grace_period: 5m
+
+  # jaayedaad-web:
+  #   build: .
+  #   ports:
+  #     - 3000:3000
+  #   environment:
+  #     - DATABASE_URL=postgresql://postgres:postgres@localhost:5432/jaayedaad-db?schema=public
+  #     - SIA_ENCRYPTION_KEY=text
+  #     - NEXTAUTH_SECRET=XIs3WWt6BIh3aZI95QM0Ggph/GwxkgK3kL8kpRHRrMo=
+
+  #   depends_on:
+  #     - postgres
+  #     - renterd
+
 volumes:
   jaayedaad-db:
     driver: local
