--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,6 @@ GOOGLE_CLIENT_SECRET=
 
 # Deployment environment (set to production for production builds)
 NODE_ENV=
-NEXT_PUBLIC_APP_URL=
 
 # Postgres db url
 DATABASE_URL=
@@ -15,10 +14,10 @@ DATABASE_URL=
 SIA_API_URL=
 
 # Sia data encryption key (recommended: openssl rand -base64 32)
-SIA_ENCRYPTION_KEY=
+ENCRYPTION_KEY=
 
 # TWELVE DATA API KEY (generated from https://twelvedata.com/)
-NEXT_PUBLIC_TWELVEDATA_API_KEY=
+TWELVEDATA_API_KEY=
 
 SIA_ADMIN_USERNAME=
 SIA_ADMIN_PASSWORD=
