--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
       NEXT_PUBLIC_POSTHOG_HOST: ${{ secrets.NEXT_PUBLIC_POSTHOG_HOST }}
       RENTERD_SEED: ${{ secrets.RENTERD_SEED }}
       RENTERD_API_PASSWORD: ${{ secrets.RENTERD_API_PASSWORD }}
+      KAMAL_REGISTRY_PASSWORD: ${{ secrets.KAMAL_REGISTRY_PASSWORD }}
 
     steps:
       - name: Checkout code
