feat: nextauth url for prod

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # NEXTAUTH WITH GOOGLE PROVIDER
 NEXTAUTH_SECRET=
 
+# Public Facing URL
+NEXTAUTH_URL=
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
