--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -23,6 +23,7 @@ env:
   secret:
     - DATABASE_URL
     - NEXTAUTH_SECRET
+    - NEXTAUTH_URL
     - ENCRYPTION_KEY
     - GOOGLE_CLIENT_ID
     - GOOGLE_CLIENT_SECRET
