--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -28,6 +28,7 @@ env:
     - GOOGLE_CLIENT_ID
     - GOOGLE_CLIENT_SECRET
     - TWELVEDATA_API_KEY
+    - USE_SIA
     - SIA_API_URL
     - SIA_ADMIN_USERNAME
     - SIA_ADMIN_PASSWORD
