chore: update env.example to match the current version

--- a/.env.example
+++ b/.env.example
@@ -13,17 +13,21 @@ NODE_ENV=
 # Postgres db url
 DATABASE_URL=
 
-# Sia url
-SIA_API_URL=
+# Sia
+
+# 1 - Sia is enabled, 0 - Sia is disabled
+USE_SIA=
+
+# Sia API URL
+SIA_API_URL=http://localhost:9880/api
+SIA_ADMIN_USERNAME=
+SIA_ADMIN_PASSWORD=
 
 # Sia data encryption key (recommended: openssl rand -base64 32)
 ENCRYPTION_KEY=
 
 # TWELVE DATA API KEY (generated from https://twelvedata.com/)
 TWELVEDATA_API_KEY=
-
-SIA_ADMIN_USERNAME=
-SIA_ADMIN_PASSWORD=
 
 NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_HOST=
