--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,38 +11,38 @@ services:
     ports:
       - 5432:5432
 
-  renterd:
-    image: ghcr.io/siafoundation/renterd:master-zen
-    environment:
-      - RENTERD_SEED=<renterd-seed>
-      - RENTERD_API_PASSWORD=<renterd-api-password>
-    ports:
-      - 9880:9880
-      - 9881:9881
-      - 7070:7070
-    volumes:
-      - ./data:/data
-    restart: unless-stopped
-    stop_grace_period: 5m
+  # renterd:
+  #   image: ghcr.io/siafoundation/renterd:master-zen
+  #   environment:
+  #     - RENTERD_SEED=<renterd-seed>
+  #     - RENTERD_API_PASSWORD=<renterd-api-password>
+  #   ports:
+  #     - 9880:9880
+  #     - 9881:9881
+  #     - 7070:7070
+  #   volumes:
+  #     - ./data:/data
+  #   restart: unless-stopped
+  #   stop_grace_period: 5m
 
-  jaayedaad-web:
-    build: .
-    ports:
-      - 3000:3000
-    environment:
-      - DATABASE_URL=<jaayedaad-database-url>
-      - ENCRYPTION_KEY=<jaayedaad-encryption-key>
-      - NEXTAUTH_SECRET=<jaayedaad-nextauth-secret>
-      - NEXTAUTH_URL=<jaayedaad-nextauth-url>
-      - GOOGLE_CLIENT_ID=<jaayedaad-google-client-id>
-      - GOOGLE_CLIENT_SECRET=<jaayedaad-google-client-secret>
-      - TWELVEDATA_API_KEY=<jaayedaad-twelvedata-api-key>
-      - SIA_ADMIN_USERNAME=<jaayedaad-sia-admin-username>
-      - SIA_ADMIN_PASSWORD=<jaayedaad-sia-admin-password>
+  # jaayedaad-web:
+  #   build: .
+  #   ports:
+  #     - 3000:3000
+  #   environment:
+  #     - DATABASE_URL=<jaayedaad-database-url>
+  #     - ENCRYPTION_KEY=<jaayedaad-encryption-key>
+  #     - NEXTAUTH_SECRET=<jaayedaad-nextauth-secret>
+  #     - NEXTAUTH_URL=<jaayedaad-nextauth-url>
+  #     - GOOGLE_CLIENT_ID=<jaayedaad-google-client-id>
+  #     - GOOGLE_CLIENT_SECRET=<jaayedaad-google-client-secret>
+  #     - TWELVEDATA_API_KEY=<jaayedaad-twelvedata-api-key>
+  #     - SIA_ADMIN_USERNAME=<jaayedaad-sia-admin-username>
+  #     - SIA_ADMIN_PASSWORD=<jaayedaad-sia-admin-password>
 
-    depends_on:
-      - postgres
-      - renterd
+  #   depends_on:
+  #     - postgres
+  #     - renterd
 
 volumes:
   jaayedaad-db:
