fix: kamal deploy action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,6 +59,7 @@ jobs:
 
       - name: Push env variables to Kamal
         run: |
+          kamal lock release
           kamal env push
 
       - name: Run deploy command
